fix: YouTube fallback iframe z-index above Phaser + difference blend mode

--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -35,6 +35,10 @@ body {
 }
 
 #phaser-container.bg-iframe-overlay {
+  canvas {
+    mix-blend-mode: difference;
+  }
+
   > div {
     z-index: 2;
   }
